--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
-          <p>I am a Clinical Research Coordinator at Massachusetts General Hospital in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>, working on research on collaborative care for people with serious mental illness and cancer. 
+          <p>I am a Clinical Research Coordinator at Massachusetts General Hospital in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>, working on research on collaborative care for people with serious mental illness and cancer and focusing on closing the cancer mortality gap for individuals with mental illness. 
             I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. This past year, I completed pre-medical postbaccalaureate coursework at Harvard. 
 
         <p>I am particularly passionate about mental health research, policy, and technology as well as questions in precision medicine, machine-in-the-loop systems in healthcare, psychiatry, integrated care, physician-patient interaction, and health equity. 
@@ -123,10 +123,13 @@
 
         <h2>Creative</h2>
         <p><b>Music</b><br>
-        Studying violin for 18 years. Write, perform, and produce music. 
+        Playing violin for 18 years. Write, perform, and produce music. 
         Recognized as a semifinalist in February 2019 in the 
         <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
-        <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>.</p>
+        <a href="https://music.apple.com/us/album/four-songs-ep/1266356645">Apple Music</a>.
+        <a href="https://open.spotify.com/album/0M1N4q3VzROin9BomBE470?si=Qaw6aivKRJCdU9nNeUO0IQ">Spotify</a>.
+        <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>.
+      </p>
 
         <p><b>Photography</b><br>
         I love capturing nature and seeing others' nature photography. ND Awards International Photo Contest 2019 Honorable Mention for image taken in Iceland. 
