--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
           My mission is to advance mental health empowerment and support.</p>
 
         <h2>Research</h2>
+        <p><b>Department of Medicine, Mass General Brigham | May 2024 - Present</b><br>
+          Collaborate with Dr. Lisa Lehmann on research on ethical considerations of a medical AI application.
+        </p>
+
         <p><b>Mass General Cancer Center | Dec. 2023 - Present</b><br>
           Work with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
+          <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a>.
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
@@ -82,6 +87,9 @@
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
   
         <h2>For-profits and Non-profits </h2>
+        <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
+        Work at street team clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Support milieu management, take vitals, and engage patients in conversation.
+
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
         Worked as front-end engineer to build Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with serious mental illness.</p>
 
