--- a/index.html
+++ b/index.html
@@ -85,17 +85,18 @@
       </p>
 
         <p><b>USC Brain and Creativity Institute | June 2016 - June 2018</b><br>
-        Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
+        Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.
+        <a href="https://dornsife.usc.edu/bci/brain-and-music-program/">Brain and Music Program</a>.</p>
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Work at street team clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Support milieu management, take vital signs, and engage patients in conversation.
+        Work at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Support milieu management, take vital signs, and engage patients in conversation.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
-        Worked as front-end engineer to build Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with serious mental illness.</p>
+        Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members to develop personalized recovery programs for people with serious mental illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
-        Wrote business profiles to inform evaluation in International Selection Panels. Spearheaded project for targeting socially diverse entrepreneurs, 
+        Wrote business profiles to inform evaluation in <a href="https://endeavor.org/stories/100-isp-dublin-31-new-high-impact-entrepreneurs/">International Selection Panels</a>. Spearheaded project for targeting socially diverse entrepreneurs, 
         researching and presenting female and minority-founded tech companies.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
@@ -111,7 +112,7 @@
           TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
-          TA for first Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
+          TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
           Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
         
         <h2>Data Projects</h2>
