--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
         Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar.
         <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP 2023 paper</a>.
+        <a href="https://web.sas.upenn.edu/cogsci/awards/">First recipient of Glushko Award at Penn</a>.
         </p>
 
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
