removed commented links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <p><a href="mailto:emmaaoneil@gmail.com">emmaaoneil@gmail.com</a></p>
         <img src="./images/profile-pic.jpg" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
-        <!-- <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1SZxePFS0vFrcHsTaRCysxvi8lB3r5OS1/view?usp=sharing">PDF Resume</a> -->
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
@@ -42,12 +41,13 @@
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
 
-        <p>I have spent time at non-profits, startups, and a software company. Most recently, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
+        <p>I have spent time at non-profits, startups, and a software company. Currently, I help support the care of patients at the MGH street team clinic of <a href="https://www.bhchp.org/">Boston Healthcare for the Homeless</a>.
+          Prior to moving to Boston, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
           a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs. During my time at Penn, I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to empower the next generation of social entrepreneurs at <a
           href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
-        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
+        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
           My mission is to advance mental health empowerment and support.</p>
 
         <h2>Research</h2>
@@ -63,7 +63,6 @@
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
           Conducted language analysis relating user reviews of mental health apps to expert ratings by <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
           <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>.
-          <!-- <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>. -->
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
@@ -76,14 +75,12 @@
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
         Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>. <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.
-        <!-- <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>. -->
         </p>
 
         <p><b>MindCORE Lila R. Gleitman Fellowship | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
         Presented 15-minute talk at research symposium. Advised by Prof. John McCoy. <a href="https://docs.google.com/presentation/d/1PLDHcEl-Ke7CRfSLh_VXU5edvKhBsjSr/edit?usp=sharing&ouid=110172381656576566280&rtpof=true&sd=true">Talk slides</a>.
-        <!-- <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">Slides</a>. -->
-      </p>
+        </p>
 
         <p><b>USC Brain and Creativity Institute | June 2016 - June 2018</b><br>
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.
