--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
 
-        <p>I have spent time at non-profits, startups, and a software company. Currently, I help support the care of patients at the MGH street team clinic of <a href="https://www.bhchp.org/">Boston Healthcare for the Homeless</a>.
+        <p>I have spent time at non-profits, startups, and a software company. Currently, I help support the care of patients at the MGH street team clinic of <a href="https://www.bhchp.org/">Boston Health Care for the Homeless Program</a>.
           Prior to moving to Boston, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
           a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs. During my time at Penn, I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to empower the next generation of social entrepreneurs at <a
