--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Work at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Support milieu management, take vital signs, and engage patients in conversation.
+        Work at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and engage patients in conversation.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
         Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members to develop personalized recovery programs for people with serious mental illness.</p>
