--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
         <p><b>Mass General Cancer Center | Dec. 2023 - Present</b><br>
           Work with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
-          <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a>. 
-          <a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>.
+          <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a> 
+          (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>. 
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
@@ -67,7 +67,7 @@
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
-        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar.
+        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and current Stanford faculty. Primarily advised by Prof. Lyle Ungar.
         <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP 2023 paper</a>.
         <a href="https://web.sas.upenn.edu/cogsci/awards/">First recipient of Glushko Award at Penn</a>.
         </p>
@@ -89,7 +89,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Work at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and engage patients in conversation.
+        Work at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and greet and talk with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
         Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members to develop personalized recovery programs for people with serious mental illness.</p>
