--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
           building a curriculum to empower the next generation of social entrepreneurs at <a
           href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
-        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
-          My mission is to advance mental health empowerment and support.</p>
+        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.</p>
 
         <h2>Research</h2>
         <p><b>Department of Medicine, Mass General Brigham | May 2024 - Present</b><br>
