--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
       </header>
       <section>
           <p>I am a Clinical Research Coordinator at Massachusetts General Hospital in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>, working on research on collaborative care for people with serious mental illness and cancer and focusing on closing the cancer mortality gap for individuals with mental illness. 
-            I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. This past year, I completed pre-medical postbaccalaureate coursework at Harvard. 
+            I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard. 
 
-        <p>I am particularly passionate about mental health research, policy, and technology as well as questions in precision medicine, machine-in-the-loop systems in healthcare, integrated care, physician-patient interaction, and health equity. 
-          My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
+        <p>My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
@@ -47,7 +46,7 @@
           building a curriculum to empower the next generation of social entrepreneurs at <a
           href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
-        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.</p>
+        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>. My mission is to help support people and their health.</p>
 
         <h2>Research</h2>
         <p><b>Department of Medicine, Mass General Brigham | May 2024 - Present</b><br>
@@ -65,13 +64,13 @@
           <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>.
         </p>
 
-        <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
+        <p><b>Honors Thesis Research in Cognitive Science | June 2021 - Dec 2023</b><br>
         Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and current Stanford faculty. Primarily advised by Prof. Lyle Ungar.
         <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP 2023 paper</a>.
         <a href="https://web.sas.upenn.edu/cogsci/awards/">First recipient of Glushko Award at Penn</a>.
         </p>
 
-        <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
+        <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - Jan 2023</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
         Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>. <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.
@@ -131,7 +130,7 @@
 
         <h2>Creative</h2>
         <p><b>Music</b><br>
-        Playing violin for 18 years. Write, perform, and produce music. 
+        Playing violin for 19 years. Write, perform, and produce music. 
         Recognized as a semifinalist in February 2019 in the 
         <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
         <a href="https://music.apple.com/us/album/four-songs-ep/1266356645">Apple Music</a>.
