--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         <p><b>Mass General Cancer Center | Dec. 2023 - Present</b><br>
           Work with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
           <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a> 
-          (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>. 
+          (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). 
+          <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>
+          (<a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Poster</a>). 
+          <a href="https://www.massgeneral.org/psychiatry/treatments-and-services/division-of-public-and-community-psychiatry">2025 MGB Public and Community Psychiatry Symposium</a>.
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
