--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). 
           <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>
           (<a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Poster</a>). 
-          <a href="https://www.massgeneral.org/psychiatry/treatments-and-services/division-of-public-and-community-psychiatry">2025 MGB Public and Community Psychiatry Symposium</a>.
+          <a href="https://www.massgeneral.org/psychiatry/treatments-and-services/division-of-public-and-community-psychiatry">2025 MGB Public and Community Psychiatry Symposium</a>
+          (<a href="https://drive.google.com/file/d/1QZ5pfLWiDzAcOOJ0XDMu7RAbi9jHk7G1/view?usp=sharing">Poster</a>).
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
