--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </header>
       <section>
           <p>I am a Clinical Research Coordinator at Massachusetts General Hospital in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>, working on research on collaborative care for people with serious mental illness and cancer and focusing on closing the cancer mortality gap for individuals with mental illness. 
-            I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard. 
+            I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
-          My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
+          My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the skill of reflection.  
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
 
