--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Work at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and greet and talk with patients.
+        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and greet and talk with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
         Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members to develop personalized recovery programs for people with serious mental illness.</p>
@@ -144,7 +144,7 @@
 
         <p><b>Photography</b><br>
         I love capturing nature and seeing others' nature photography. ND Awards International Photo Contest 2019 Honorable Mention for image taken in Iceland. 
-        <a href="https://photos.app.goo.gl/gZxgEAJNEymCj6UX7">Sample of my photos</a>.</p>
+        <a href="https://photos.app.goo.gl/gZxgEAJNEymCj6UX7">Sample of photos</a>.</p>
 
       </section>
       <footer>
