--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
-          <p>I am a Clinical Research Coordinator at Massachusetts General Hospital in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>, working on research on collaborative care for people with serious mental illness and cancer and focusing on closing the cancer mortality gap for individuals with mental illness. 
+          <p>I am currently a Clinical Research Coordinator at Massachusetts General Hospital. 
             I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
@@ -49,12 +49,16 @@
         <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>. My mission is to help support people and their health.</p>
 
         <h2>Research</h2>
-        <p><b>Department of Medicine, Mass General Brigham | May 2024 - Present</b><br>
+        <p><b>Dept. of Psychiatry, Massachusetts General Hospital | June 2025 - Present</b><br>
+          Work with Dr. Katherine Koh on street psychiatry research.
+        </p>
+        
+        <p><b>Dept. of Medicine, Mass General Brigham | May 2024 - Present</b><br>
           Collaborate with Dr. Lisa Lehmann on research on ethical considerations of a medical AI application.
         </p>
 
-        <p><b>Mass General Cancer Center | Dec. 2023 - Present</b><br>
-          Work with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
+        <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
+          Worked with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
           <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a> 
           (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). 
           <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>
@@ -110,10 +114,10 @@
 
         <h2>Teaching</h2>
         <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - May 2023</b><br>
-          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
+          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaé Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
-          TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
+          TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaé Metaxa. 
           Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
         
         <h2>Data Projects</h2>
