--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
+          My work at Massachusetts General Cancer Center involved managing a pilot study of a virtual cancer and mental health tumor board, focusing on health disparities for individuals with serious mental illness and cancer.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the skill of reflection.  
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
@@ -74,7 +75,7 @@
 
         <p><b>Honors Thesis Research in Cognitive Science | June 2021 - Dec 2023</b><br>
         Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and current Stanford faculty. Primarily advised by Prof. Lyle Ungar.
-        <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP 2023 paper</a>.
+        <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP GEM 2023 paper</a>.
         <a href="https://web.sas.upenn.edu/cogsci/awards/">First recipient of Glushko Award at Penn</a>.
         </p>
 
@@ -119,7 +120,7 @@
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
           TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaé Metaxa. 
           Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
-        
+
         <h2>Data Projects</h2>
         <p><b>Mental Health Support on Reddit</b><br>
         A <a href="https://oneilemma.medium.com/mental-health-support-on-reddit-64e5f3d38923?source=friends_link&sk=undefined">text analysis</a> 
@@ -136,19 +137,14 @@
         <p><b>Vegan in Philly</b><br>
         A <a href="https://embracingplantfood.weebly.com/">data exploration</a> of vegan food in Philadelphia with Tableau.</p>
 
-        <h2>Creative</h2>
-        <p><b>Music</b><br>
+        <h2>Music</h2>
+        <p><b>Violin and Songwriting</b><br>
         Playing violin for 19 years. Write, perform, and produce music. 
         Recognized as a semifinalist in February 2019 in the 
         <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
         <a href="https://music.apple.com/us/album/four-songs-ep/1266356645">Apple Music</a>.
         <a href="https://open.spotify.com/album/0M1N4q3VzROin9BomBE470?si=Qaw6aivKRJCdU9nNeUO0IQ">Spotify</a>.
-        <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>.
       </p>
-
-        <p><b>Photography</b><br>
-        I love capturing nature and seeing others' nature photography. ND Awards International Photo Contest 2019 Honorable Mention for image taken in Iceland. 
-        <a href="https://photos.app.goo.gl/gZxgEAJNEymCj6UX7">Sample of photos</a>.</p>
 
       </section>
       <footer>
