--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </header>
       <section>
           <p>I am currently a Clinical Research Coordinator at Massachusetts General Hospital. 
-            I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
+            I graduated in December 2022 with a dual degree from The Wharton School and University of Pennsylvania, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
-          My work at Massachusetts General Cancer Center involved managing a pilot study of a virtual cancer and mental health tumor board, focusing on health disparities for individuals with serious mental illness and cancer.
+          My work at <a href="https://www.massgeneral.org/cancer-center">Mass General Cancer Center</a> involved managing a pilot study of a virtual cancer and mental health tumor board, focusing on health disparities for individuals with serious mental illness and cancer.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the skill of reflection.  
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
@@ -59,7 +59,7 @@
         </p>
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
-          Worked with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
+          Worked with Dr. Kelly Irwin on virtual cancer and mental health tumor board trial to increase the reach of person-centered cancer care for adults with SMI and cancer at a community cancer center affiliate.
           <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a> 
           (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). 
           <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>
@@ -96,7 +96,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and greet and talk with patients.
+        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and connect with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
         Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members to develop personalized recovery programs for people with serious mental illness.</p>
