--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p><a href="mailto:emmaaoneil@gmail.com">emmaaoneil@gmail.com</a></p>
-        <img src="./images/profile-pic.jpg" style="width:200px;height:200px;"/><br>
+        <img src="./images/headshot.png" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
