--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             I graduated in December 2022 with a dual degree from The Wharton School and University of Pennsylvania, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies across health services, health equity, AI ethics, human-computer interaction, machine learning, natural language processing, and computational social science.
-          My work at <a href="https://www.massgeneral.org/cancer-center">Mass General Cancer Center</a> involved managing a pilot study of a virtual cancer and mental health tumor board, focusing on health disparities for individuals with serious mental illness and cancer.
+          My work at <a href="https://www.massgeneral.org/cancer-center">Mass General Cancer Center</a> involved managing a pilot study of a virtual cancer and mental health tumor board, focusing on health disparities among individuals with serious mental illness and cancer.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the skill of reflection.  
           In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing and framing the evidence-based design of the prototype.
